test_regress/t/t_var_port2_bad.out
%Error: t/t_var_port2_bad.v:6: Input/output/inout declaration not found for port: portwithoin
%Error: t/t_var_port2_bad.v:7: Input/output/inout does not appear in port list: portwithin
%Error: Exiting due to
